@@ -1,7 +1,6 @@
 from pathlib import Path
 
 from flask import Flask, g, json, render_template, request, send_from_directory
-from werkzeug.utils import secure_filename
 
 import quizmaker
 
@@ -11,8 +10,7 @@ try:
     import gspread
 except ImportError:
     import sys
-    sp = HOMEDIR.parent / ".local/lib/python3.9/site-packages"
-    sys.path.insert(0, str(sp))
+    sys.path.insert(0, str(HOMEDIR.parent / ".local/lib/python3.9/site-packages"))
     import gspread
 
 app = Flask(__name__)
@@ -29,36 +27,20 @@ def get_sheets():
 def home():
     sheets = []
     for sheet in g.sh.worksheets():
-        if ("/" not in sheet.title) and (sheet.title not in ("How To Use This Document", "Template")):
+        if all(("/" not in sheet.title,
+        "\\" not in sheet.title,
+        sheet.title not in ("How To Use This Document", "Template"))):
             sheets.append(sheet.title)
     sheets.sort()
     changelog = json.load(open(HOMEDIR / "CHANGELOG"))
     return render_template("home.html", sheets=sheets, changelog=changelog)
 
-@app.route("/sheet", methods=["POST"])
+@app.route("/download", methods=["POST"])
 def convert_sheet():
     sheet = g.sh.worksheet(request.form.get("sheet"))
-    data = sheet.get_values()
+    data = sheet.get_all_records()
     audio = bool(request.form.get("r3audio"))
-    quizfile = f"{sheet.title}.pptx"
-    quiz = quizmaker.build_quiz(HOMEDIR / "static/pptx_template.pptx", data, audio=audio, sheet=True)
-    quiz.save(HOMEDIR / "output" / quizfile)
-    return send_from_directory(HOMEDIR / "output", quizfile, as_attachment=True)
-
-@app.route("/download", methods=["POST"])
-def convert():
-    #pattern from https://flask.palletsprojects.com/en/2.0.x/patterns/fileuploads/
-    raw_file = request.files["data_file"]
-    audio = bool(request.form.get("r3audio"))
-    if raw_file and raw_file.filename.endswith(".csv"):
-        pass
-    else:
-        "Invalid file; please select a .csv file generated by Google Sheets."
-    filename = secure_filename(raw_file.filename)
-    raw_file.save(HOMEDIR / "uploads" / filename)
-
-    quizfile = f"{filename[:filename.find('.csv')]}.pptx"
-    quiz = quizmaker.build_quiz(HOMEDIR / "static/pptx_template.pptx", HOMEDIR / "uploads" / filename, audio=audio)
-    quiz.save(HOMEDIR / "output" / quizfile)
-
-    return send_from_directory(HOMEDIR / "output", quizfile, as_attachment=True)
+    outfile = f"{sheet.title}.pptx"
+    quiz = quizmaker.build_quiz(HOMEDIR / "static/pptx_template.pptx", data, audio=audio)
+    quiz.save(HOMEDIR / "output" / outfile)
+    return send_from_directory(HOMEDIR / "output", outfile, as_attachment=True)
