@@ -1,16 +1,16 @@
 <html>
     <body>
-        <h1>Create Quiz Slide Deck</h1>
+        <h1>BWPT Quizmaker</h1>
         <h2>Instructions:</h2>
         <ol>
-            <li>Download your quiz from the shared Google Sheets document (<em>File > Download > Comma-separated values (.csv, current sheet)</em>).</li>
-            <li>Upload that file using the "Browse..." button below, then click "Submit".</li>
-            <li>Save the output file generated by your browser. It will have the same name as the file you submitted earlier.</li>
-            <li>Address the issues noted below with a quick edit pass before emailing to R & C.</li>
+            <li>Select the sheet with the quiz data you would like to import from the dropdown menu and click "Load Sheet".</li>
+            <li>Save the output file generated by your browser. It will have the same name as the sheet you selected.</li>
+            <li>Edit the output file for text size before emailing to <strong>buzzworthytrivia@gmail.com</strong>.</li>
         </ol>
         <h2>Known issues:</h2>
         <ul>
-            <li>Bold, italic, and underline formatting is stripped out when downloading as .csv</li>
+            <li>Any sheet names with a "/" or "\" character in them will not appear in the dropdown</li>
+            <li>Bold, italic, and underline formatting is stripped out upon import</li>
             <li>Text size does not auto-fit to text box size</li>
         </ul>
         <br>
@@ -20,19 +20,11 @@
                 <option value="{{sheet}}">{{sheet}}</option>
             {% endfor %}
         </select>
-        <form id="sheetform" action="/sheet" method="POST">
+        <form id="sheetform" action="/download" method="POST">
             <input type="submit" value="Load Sheet">
             <input type="checkbox" id="r3audio" name="r3audio" checked>
             <label for="r3audio">Audio Round 3?</label>
         </form>
-        <!--<form action="/download" method="POST" enctype="multipart/form-data">-->
-        <!--    <input type="file" name="data_file">-->
-        <!--    <input type="submit" value="Submit">-->
-        <!--    <div>-->
-        <!--    <input type="checkbox" id="r3audio" name="r3audio" checked>-->
-        <!--    <label for="r3audio">Audio Round 3?</label>-->
-        <!--    </div>-->
-        <!--</form>-->
         <br>
         <h2>Changelog:</h2>
         <ul>
@@ -48,7 +40,7 @@
             </li>
             {% endfor %}
         </ul>
-        <p>Please contact <strong>quizmakeradmin@protonmail.com</strong> if you have questions or receive an error.</p>
+        <p>Please contact <strong>bghull@protonmail.com</strong> if you have questions or receive an error.</p>
         <p>GPL 3.0 -- <a href="https://github.com/bghull/quizmaker/">GitHub</a></p>
     </body>
 </html>
